add props for select form component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -753,6 +753,8 @@ sections:
         component: SelectForm
         componentAttributes:
           translateLabels: true
+          canEdit: false
+          canCreate: true
           fields:
             - name: firstname
               component: Input
