--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -92,6 +92,8 @@ sections:
 - name: mainFormSection
   rootComponent: MainForm
   icon: catalogue
+  hideUserModified: false
+  hideUserCreated: true
   topComponents:
     - component: TestComponent
     - component: TestComponentLeft
@@ -1131,6 +1133,8 @@ sections:
 
 - name: testFormSection
   rootComponent: FormSection
+  hideUserModified: false
+  hideUserCreated: true
   source:
     service: sac
     namespace: claim-motive
