--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -626,6 +626,9 @@ sections:
         canChangeElements: true
         uniqueField: true
         minElements: 1
+        addButtonText: some.traduction
+        addButtonColor: colorName
+        addButtonIcon: iconName
         fields:
           - name: test
             component: Text
