refactor actions callbacks

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -175,6 +175,15 @@ sections:
       iconColor: colorName
       color: colorName
       backgroundColor: colorName
+      callback:
+        name: redirect
+        props:
+          path: /some/path/{id}
+          endpointParameters:
+            - name: status
+              target: path
+              value:
+                dynamic: id
       conditions:
         showWhen:
           - - name: isNotEmpty
