add target for callback redirect and change docu

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -179,6 +179,7 @@ sections:
         name: redirect
         props:
           path: /some/path/{id}
+          target: _blank
           endpointParameters:
             - name: status
               target: path
