--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -627,7 +627,8 @@ sections:
         uniqueField: true
         minElements: 1
         addButtonText: some.traduction
-        addButtonColor: colorName
+        addButtonTextColor: colorName
+        addButtonBackgroundColor: colorName
         addButtonIcon: iconName
         fields:
           - name: test
