--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -293,6 +293,7 @@ sections:
 
     - name: exampleTextCurrency
       component: Text
+      dependency: dependencyName
       mapper:
         name: currency
         props:
