--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -507,6 +507,23 @@ sections:
     - name: exampleMapThree
       component: Map
 
+    - name: exampleLocationOne
+      component: Location
+      componentAttributes:
+        label: some.traduction.label
+        fieldsMapping:
+          latitude: lat
+          longitude: lng
+
+    - name: exampleLocationTwo
+      component: Location
+      componentAttributes:
+        label:
+          template: '{0} {1}'
+          fields:
+            - address
+            - country
+
     - name: asyncWrapperExampleOne
       component: AsyncWrapper
       componentAttributes:
