add summary oms components

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1420,3 +1420,46 @@ sections:
               component: Link
               componentAttributes:
                 path: /some/path/{id}
+
+    - name: totals
+      component: OMSOrderTotalsCard
+      x: 0
+      y: 3
+      width: 4
+      height: 4
+
+    - name: steps
+      component: OMSOrderStepsCard
+      x: 0
+      y: 3
+      width: 4
+      height: 4
+
+    - name: shipping
+      component: OMSOrderShippingCard
+      x: 0
+      y: 3
+      width: 4
+      height: 4
+
+    - name: picking
+      component: OMSOrderPickingCard
+      x: 0
+      y: 3
+      width: 4
+      height: 4
+
+    - name: customer
+      component: OMSOrderCustomerCard
+      x: 0
+      y: 3
+      width: 4
+      height: 4
+
+    - name: payment
+      component: OMSOrderPaymentsCard
+      x: 0
+      y: 3
+      width: 4
+      height: 4
+
