add new component schema statusSelector for forms and filters

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -998,6 +998,17 @@ sections:
             method: method
             resolve: false
 
+      - name: newStatusOne
+        component: StatusSelector
+
+      - name: newStatusTwo
+        component: StatusSelector
+        componentAttributes:
+          values:
+            - active
+            - inactive
+            - procesing
+
       - name: someFieldPreview
         component: Preview
         componentAttributes:
