--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "export TEST_ENV=true; mocha --timeout 4000 --exit -R nyan --require tests/bootstrap.js --recursive tests/",
     "test-ci": "nyc --reporter=lcov --reporter=text-summary mocha --exit --recursive tests/",
+    "coverage:report-html": "export MS_PATH=src; export TEST_ENV=true; nyc --reporter=html --reporter=text mocha --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --timeout 4000 --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
     "lint": "eslint index.js lib/ tests/",
@@ -26,9 +27,9 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "husky": "^2.4.1",
-    "mocha": "^8.2.1",
+    "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "sinon": "^7.3.2"
+    "sinon": "^7.5.0"
   },
   "files": [
     "lib/"
@@ -38,15 +39,16 @@
   },
   "dependencies": {
     "@janiscommerce/endpoint-resolver": "^1.0.0",
-    "@janiscommerce/router-fetcher": "^2.0.0",
-    "ajv": "^6.10.2",
-    "chokidar": "^3.3.1",
+    "@janiscommerce/router-fetcher": "^2.1.0",
+    "ajv": "^6.12.6",
+    "chokidar": "^3.5.1",
     "fs-extra": "^8.1.0",
     "lllog": "^1.1.2",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
-    "mock-fs": "^4.10.1",
+    "mock-fs": "^4.14.0",
+    "node-emoji": "^1.10.0",
     "yamljs": "^0.3.0",
-    "yargs": "^13.3.0"
+    "yargs": "^13.3.2"
   }
 }
