add placeholder prop field form

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -344,6 +344,7 @@ sections:
 
     - name: descriptionTwo
       component: Textarea
+      placeholder: some.traduction.placeholder
       componentAttributes:
         autoComplete: false
 
