add searchMethod prop in dependencies

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -144,6 +144,7 @@ sections:
               value:
                 static: active
           targetField: fieldNameThree
+          searchMethod: filter
 
   topComponents:
     - component: TestComponent
