--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1416,9 +1416,9 @@ sections:
   rootComponent: Summary
 
   source:
-    service: service
-    namespace: namespace
-    method: method
+    service: serviceName
+    namespace: namespaceName
+    method: methodName
     resolve: false
 
   cards:
@@ -1481,3 +1481,29 @@ sections:
       width: 4
       height: 4
 
+- name: remoteSection
+  rootComponent: RemoteSection
+  source:
+    service: serviceName
+    namespace: namespaceName
+    method: methodName
+    resolve: false
+  target:
+    service: serviceName
+    namespace: namespaceName
+    method: methodName
+    resolve: false
+  sourceField: someField
+  overwriteName: someName
+  schemaSource:
+    type: dynamic
+    endpoint:
+      service: serviceName
+      namespace: namespaceName
+      method: methodName
+      resolve: false
+    endpointParameters:
+      - name: id
+        target: path
+        value:
+          dynamic: id
