change property name creatable to canCreate

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1021,20 +1021,20 @@ sections:
             - inactive
             - procesing
 
-      - name: creatableStatusSelector
+      - name: canCreateStatusSelector
         component: StatusSelector
         componentAttributes:
-          creatable: true
+          canCreate: true
 
-      - name: creatableUserSelector
+      - name: canCreateUserSelector
         component: UserSelector
         componentAttributes:
-          creatable: true
+          canCreate: true
 
-      - name: creatableSelect
+      - name: canCreateSelect
         component: Select
         componentAttributes:
-          creatable: true
+          canCreate: true
           labelPrefix: common.status.
           translateLabels: true
           options:
