--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1523,7 +1523,7 @@ sections:
     method: methodName
     resolve: false
   sourceField: someField
-  overwriteName: someName
+  overwriteName: true
   schemaSource:
     type: dynamic
     endpoint:
