--- a/tests/mocks/schemas/preview.yml
+++ b/tests/mocks/schemas/preview.yml
@@ -30,6 +30,7 @@ actions:
     type: link
     componentAttributes:
       path: /playground/views-demo/{id}
+      linkTarget: _blank
       target:
         service: playground
         namespace: views-demo
@@ -43,6 +44,11 @@ actions:
 
   - name: someActionTwo
     type: endpoint
+    conditions:
+      showWhen:
+        - - name: isNotEmpty
+            field: order
+    callback: reloadBrowse
     componentAttributes:
       endpoint:
         service: playground
