--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@janiscommerce/endpoint-resolver": "^1.0.0",
     "@janiscommerce/router-fetcher": "^2.1.0",
     "ajv": "^6.12.6",
