add action preview props

--- a/tests/mocks/schemas/preview.yml
+++ b/tests/mocks/schemas/preview.yml
@@ -28,6 +28,8 @@ themes:
 actions:
   - name: someActionOne
     type: link
+    sections:
+      - sectionName
     componentAttributes:
       path: /playground/views-demo/{id}
       linkTarget: _blank
