add conditions for fieldGroups

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1444,6 +1444,11 @@ sections:
       height: 4
       fieldsGroup:
         - name: details
+          conditions:
+            showWhen:
+              - - name: isNotEmpty
+                  field: order
+
           fields:
             - name: someField
               component: Text
