add with prop to edit field

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -691,6 +691,7 @@ sections:
 
     - name: someInput
       component: Input
+      width: 50
       componentAttributes:
         autoComplete: true
         icon: iconName
