add static boolean value for endpointParameters

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -159,10 +159,10 @@ sections:
                 target: path
                 value:
                   dynamic: id
-              - name: status
-                target: query
+              - name: withData
+                target: body
                 value:
-                  static: 1
+                  static: true
 
         - name: testAction
           icon: star_light
