add labelMapper for Links

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -620,6 +620,7 @@ sections:
         translateLabels: true
         label: test.test.test
         labelField: asdasd
+        labelMapper: addHashtag
 
     - name: linkTest3
       component: Link
