--- a/tests/mocks/schemas/preview.yml
+++ b/tests/mocks/schemas/preview.yml
@@ -104,6 +104,7 @@ sections:
       component: Link
       componentAttributes:
         translateLabels: false
+        labelMapper: addHashtag
         path: "/playground/views-demo/{id}"
         endpointParameters:
         - name: id
