add defaultTitle header component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -32,6 +32,10 @@ header:
         componentAttributes:
           value: some.traduction
           color: red
+      - name: someTitle
+        component: DefaultTitle
+        componentAttributes:
+          identifier: someFieldName
 
 themes:
   themeOne:
