--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1050,6 +1050,11 @@ sections:
   rootComponent: BrowseSection
   canRefresh: true
 
+  themes:
+    themeOne:
+      new: black
+      closed: green
+
   statusBar:
     useTheme: themeName
     themeConditionals:
@@ -1349,6 +1354,10 @@ sections:
   rootComponent: FormSection
   hideUserModified: false
   hideUserCreated: true
+  themes:
+    themeOne:
+      new: black
+      closed: green
   source:
     service: sac
     namespace: claim-motive
