add new prop for endpointParameters

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -67,8 +67,9 @@ remoteActions:
         dynamic: id
     - name: status
       target: query
+      mapper: booleanToStatus
       value:
-        static: 1
+        static: true
 
 sections:
 - name: mainFormSection
