--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -387,6 +387,7 @@ sections:
         fontWeight: normal
 
     - name: exampleImage
+      translateLabels: false
       component: Image
 
     - name: exampleImageWithProps
@@ -1515,6 +1516,7 @@ sections:
 
           fields:
             - name: someField
+              translateLabels: false
               component: Text
 
             - name: linkField
