add schema for new date picker

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -968,6 +968,12 @@ sections:
               label: name
               value: id
 
+      - name: dateTimeNew
+        component: NewDatePicker
+        componentAttributes:
+          selectDate: true
+          selectTime: false
+
       - name: dateTime
         component: DateTimePicker
         componentAttributes:
