--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -9,10 +9,12 @@ source:
   resolve: false
 
 schemaSource:
-  service: playground
-  namespace: views-demo
-  method: monitor
-  resolve: false
+  type: dynamic
+  endpoint:
+    service: playground
+    namespace: views-demo
+    method: monitor
+    resolve: false
 
 filters:
   - name: filterInput
