remove canExport canEdit prop default values

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1104,6 +1104,7 @@ sections:
   rootComponent: BrowseSection
   sourceField: fieldName
   canRefresh: true
+  canEdit: false
 
   themes:
     themeOne:
