fix changing sourceEndpointParameter to endpointParameters in remoteSection

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1612,7 +1612,7 @@ sections:
       namespace: namespaceName
       method: methodName
       resolve: false
-    sourceEndpointParameters:
+    endpointParameters:
       - name: service
         target: filter
         value:
