add new type of conditional matchWhen

--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -35,6 +35,16 @@ filters:
 fields:
   - name: someField
     component: Text
+    conditions:
+      matchWhen:
+        - - name: isNotEmpty
+            field:
+              - test
+              - tes2
+          - name: isNotEqualTo
+            field: name
+            referenceValueType: static
+            referenceValue: null
 
   - name: someField
     component: Chip
