--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -16,6 +16,18 @@ schemaSource:
     method: monitor
     resolve: false
 
+themes:
+  themeOne:
+    new: black
+    closed: green
+    _default: grey
+  themeTwo:
+    new: grey
+    closed: fizzgreen
+    warning:
+      somePropOne: someValue
+      somePropTwo: someValue
+
 filters:
   - name: filterInput
     component: Input
