--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1008,12 +1008,18 @@ sections:
         - name: multiInputExample
           component: MultiInput
           componentAttributes:
+            type: number
+            autoComplete: true
+            icon: box
             labelsPrefix: common.test.
             labelPrefix: common.test.
             translateLabels: true
             requiredFields:
               - test
               - test2
+              - name: test3
+                componentAttributes:
+                  type: number
 
         - name: userAssigned
           component: UserSelector
