--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -2,11 +2,19 @@ service: picking
 name: views-demo-monitor
 root: Monitor
 
+autoRefresh: true
+
 source:
   service: playground
   namespace: views-demo
   method: list
   resolve: false
+
+endpointParameters:
+  - name: status
+    target: filter
+    value:
+      static: active
 
 schemaSource:
   type: dynamic
@@ -28,6 +36,18 @@ themes:
       somePropOne: someValue
       somePropTwo: someValue
 
+statusBar:
+  field: statusFieldName
+  hide: true
+  useTheme: true
+
+sortableFields:
+  - name: test
+  - name: test1
+    isDefaultSort: true
+  - name: test2
+    initialSortDirection: asc
+
 filters:
   - name: filterInput
     component: Input
@@ -43,6 +63,57 @@ filters:
         values:
           - label: test
             value: 1
+
+dependencies:
+  - name: dependencyOne
+    source:
+      service: serviceName
+      namespace: namespaceName
+      method: methodName
+      resolve: false
+    endpointParameters:
+      - name: status
+        target: path
+        value:
+          dynamic: id
+      - name: status
+        target: filter
+        value:
+          static: active
+    targetField: fieldNameOne
+  - name: dependencyTwo
+    source:
+      service: serviceName
+      namespace: namespaceName
+      method: methodName
+      resolve: false
+    endpointParameters:
+      - name: status
+        target: path
+        value:
+          dynamic: id
+      - name: status
+        target: filter
+        value:
+          static: active
+    targetField: fieldNameTwo
+    dependencies:
+      - name: dependencyThree
+        source:
+          service: serviceName
+          namespace: namespaceName
+          method: methodName
+          resolve: false
+        endpointParameters:
+          - name: status
+            target: path
+            value:
+              dynamic: id
+          - name: status
+            target: filter
+            value:
+              static: active
+        targetField: fieldNameThree
 
 fields:
   - name: someCardOne
