update monitor test schmeas

--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -125,6 +125,7 @@ fields:
         fields:
           - name: someField
             component: Text
+            dependency: dependencyOne
           - name: otherField
             component: Chip
     conditions:
