add conditions in actions monitor cards

--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -137,6 +137,11 @@ fields:
       - name: testLink
         path: /test/{id}
         target: _self
+        conditions:
+          showWhen:
+            - - name: isEqualTo
+                field: name
+                referenceValue: test
         endpointParameters:
           - name: id
             target: path
