move canImport in browse base schema

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1097,6 +1097,8 @@ sections:
     sourceField: fieldName
     canRefresh: true
     canEdit: false
+    canImport: true
+    canExport: true
     themes:
       themeOne:
         new: black
