add new prop for link component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -672,6 +672,7 @@ sections:
           label: test.test.test
           labelField: asdasd
           labelMapper: addHashtag
+          icon: iconName
 
       - name: linkTest3
         component: Link
