add useTimezone prop in dateTimePicker

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -980,12 +980,14 @@ sections:
         - name: dateTimeNew
           component: NewDatePicker
           componentAttributes:
+            useTimezone: false
             selectDate: true
             selectTime: false
 
         - name: dateTime
           component: DateTimePicker
           componentAttributes:
+            useTimezone: true
             selectDate: false
             selectTime: true
             selectRange: true
