--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1542,6 +1542,27 @@ sections:
       namespace: namespaceName
       method: methodName
       resolve: false
+    dependencies:
+      - name: dependencyOne
+        source:
+          service: serviceName
+          namespace: namespaceName
+          method: methodName
+          resolve: false
+        endpointParameters:
+          - name: status
+            target: path
+            value:
+              dynamic: id
+          - name: status
+            target: filter
+            value:
+              static: active
+          - name: sortBy
+            target: queryString
+            value:
+              static: status
+        targetField: fieldNameOne
     cards:
       - name: firstCard
         component: BaseCard
