add new prop for conditions schema

--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -150,8 +150,9 @@ fields:
         conditions:
           showWhen:
             - - name: isEqualTo
-                field: name
-                referenceValue: test
+                field: orderData
+                innerField: status
+                referenceValue: active
         componentAttributes:
           path: /test/{id}
           linkTarget: _self
