add new prop for select in form

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -837,6 +837,7 @@ sections:
           componentAttributes:
             translateLabels: true
             preloadOptions: true
+            targetField: fieldName
             options:
               scope: remote
               endpoint:
