--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -584,6 +584,7 @@ sections:
           markers:
             icon: iconName
             color: colorName
+            size: 30
             useTheme: themeName
             infoSchema:
               fieldsGroup:
