add prop drawRoute in map component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -620,6 +620,7 @@ sections:
           showSearchBar: true
           canAddMarkers: true
           maxMarkersQuantity: 5
+          drawRoute: true
           fieldsMapping:
             latitude: lat
             longitude: lng
