--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -869,6 +869,8 @@ sections:
           component: Select
           componentAttributes:
             translateLabels: true
+            targetField:
+              someField: otherField
             options:
               scope: remote
               endpoint:
