--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1045,6 +1045,13 @@ sections:
             useTimezone: false
             selectDate: true
             selectTime: false
+            canCreateTime: false
+            timeOptions:
+              hourLapse: 2
+              minuteLapse: 30
+              custom:
+                - '11:00'
+                - '20:00'
 
         - name: dateTime
           component: DateTimePicker
