--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -128,6 +128,7 @@ fields:
     component: BaseCard
     label: some.label.key
     translateLabel: false
+    actionsModalSize: large
     actions:
       - name: testEndpoint
         type: endpoint
@@ -166,6 +167,7 @@ fields:
         type: form
         callback: reloadData
         componentAttributes:
+          modalSize: mobile
           endpoint:
             service: serviceName
             namespace: namespaceName
