add modification for template mapper

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -671,7 +671,12 @@ sections:
           label:
             template: '{0} {1}'
             fields:
-              - address
+              - name: address
+                mapper: addHashtag
+                conditions:
+                  showWhen:
+                    - - name: isNotEmpty
+                        field: order
               - country
 
       - name: asyncWrapperExampleOne
