add fieldList componente for edit/summary/readonly sections

--- a/tests/mocks/schemas/preview.yml
+++ b/tests/mocks/schemas/preview.yml
@@ -161,6 +161,14 @@ sections:
     - name: friends
       component: Code
 
+    - name: fieldListTest
+      component: FieldList
+      componentAttributes:
+        direction: horizontal
+        fields:
+          - name: someField
+            component: Text
+
   - name: others
     position: right
     translateLabel: false
