--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -128,6 +128,7 @@ fields:
     component: BaseCard
     label: some.label.key
     translateLabel: false
+    mapper: addHashtag
     actionsModalSize: large
     actions:
       - name: testEndpoint
