add new prop defaultValueField

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -402,6 +402,7 @@ sections:
 
       - name: exampleTextPrefix
         component: Text
+        defaultValueField: someField
         mapper:
           name: prefix
           props:
