--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -56,6 +56,9 @@ sortableFields:
   - name: test2
     initialSortDirection: asc
 
+featureFlags:
+  allowMultiSort: false
+
 filters:
   - name: filterInput
     component: Input
