--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -4,6 +4,18 @@ root: Monitor
 
 autoRefresh: 60
 
+source:
+  service: playground
+  namespace: views-demo
+  method: list
+  resolve: false
+
+endpointParameters:
+  - name: status
+    target: filter
+    value:
+      static: active
+
 schemaSource:
   type: dynamic
   endpoint:
