add urlField in Image component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -474,6 +474,7 @@ sections:
               roundBorders: 50
               width: 50
               height: 50
+              urlField: "imageUrl"
 
           - name: exampleUserImage
             component: UserImage
