add new property uploadMultiplesFiles into file section

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1532,6 +1532,7 @@ sections:
       - image/png
       - image/jpg
       - image/gif
+    uploadMultiplesFiles: true
 
   - name: orderItemsSection
     rootComponent: OrderItemsSection
