add new properties in graph schema for TextCardKPI

--- a/tests/mocks/schemas/dashboard.yml
+++ b/tests/mocks/schemas/dashboard.yml
@@ -51,32 +51,28 @@ graphs:
 
   - component: TextCardKpi
     name: TextCard
-    title: playground.title.delivery
+    title: title
     source:
-    - service: playground
-      namespace: views-demo-dashboard-delivery
+      service: serviceName
+      namespace: namespaceName
       method: list
       resolve: true
-      httpMethod: get
-      url: https://playground.janisdev.in/api/views-demo-dashboard-delivery/
-
     value:
-      - field: carrierValue
-        mapper:
-        - name: suffix
-          props:
-          - addWhitespace: true
-            value: 'hs'
-
+      field: someField
+      mapper:
+        name: suffix
+        props:
+          addWhitespace: true
+          value: 'hs'
     percent:
-      - field: percent
-        mapper:
-        - name: suffix
-          props:
-          - addWhitespace: true
-            value: '%'
-    x: 0,
-    y: 0,
+      field: someField
+      mapper:
+        name: suffix
+        props:
+          addWhitespace: true
+          value: '%'
+    x: 0
+    y: 0
     width: 12
     height: 4
 
