--- a/tests/mocks/schemas/dashboard.yml
+++ b/tests/mocks/schemas/dashboard.yml
@@ -75,5 +75,26 @@ graphs:
     y: 0
     width: 12
     height: 4
+  - component: TextCardKpi
+    name: TextCardDelivery
+    title: title
+    value:
+      field: someField
+      mapper:
+        name: suffix
+        props:
+          addWhitespace: true
+          value: 'hs'
+    percent:
+      field: someField
+      mapper:
+        name: suffix
+        props:
+          addWhitespace: true
+          value: '%'
+    x: 0
+    y: 0
+    width: 12
+    height: 4
 
 
