add new props for Code component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -662,6 +662,8 @@ sections:
             componentAttributes:
               language: json
               canEdit: true
+              minLines: 5
+              maxLines: 15
 
           - name: exampleMap
             component: Map
