Corregida property sourceEndpointParameters de actions

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -89,7 +89,7 @@ actions:
     namespace: namespaceName
     method: methodName
     resolve: false
-  endpointParameters:
+  sourceEndpointParameters:
     - name: status
       target: query
       value:
