--- a/tests/mocks/schemas/edit-with-actions-static.yml
+++ b/tests/mocks/schemas/edit-with-actions-static.yml
@@ -80,6 +80,26 @@ dependencies:
           static: status
     targetField: fieldNameOne
 collapseSections: true
+actions:
+  title: common.title
+  translateTitle: true
+  modalSize: large
+  actions:
+    - name: testEndpoint
+      type: endpoint
+      callback: refresh
+      componentAttributes:
+        icon: box
+        endpoint:
+          service: serviceName
+          namespace: namespaceName
+          method: methodName
+          resolve: false
+        endpointParameters:
+          - name: id
+            target: path
+            value:
+              dynamic: id
 sections:
   - name: mainFormSection
     rootComponent: MainForm
