--- a/tests/mocks/schemas/edit-with-actions.yml
+++ b/tests/mocks/schemas/edit-with-actions.yml
@@ -80,6 +80,36 @@ dependencies:
           static: status
     targetField: fieldNameOne
 collapseSections: true
+actions:
+  title: common.title
+  translateTitle: true
+  modalSize: large
+  source:
+    service: serviceName
+    namespace: namespaceName
+    method: methodName
+    resolve: false
+  sourceEndpointParameters:
+    - name: status
+      target: query
+      value:
+        static: active
+  actions:
+    - name: testEndpoint
+      type: endpoint
+      callback: refresh
+      componentAttributes:
+        icon: box
+        endpoint:
+          service: serviceName
+          namespace: namespaceName
+          method: methodName
+          resolve: false
+        endpointParameters:
+          - name: id
+            target: path
+            value:
+              dynamic: id
 sections:
   - name: mainFormSection
     rootComponent: MainForm
