cambiado action interno de actions para mejor entendimiento a staticActions

--- a/tests/mocks/schemas/edit-with-actions-static.yml
+++ b/tests/mocks/schemas/edit-with-actions-static.yml
@@ -84,7 +84,7 @@ actions:
   title: common.title
   translateTitle: true
   modalSize: large
-  actions:
+  staticActions:
     - name: testEndpoint
       type: endpoint
       callback: refresh
