add new component CsxClaimChange

--- a/tests/mocks/schemas/edit-with-actions.yml
+++ b/tests/mocks/schemas/edit-with-actions.yml
@@ -1416,8 +1416,8 @@ sections:
         component: Color
         componentAttributes:
           showCode: true
-      - name: sacClaimChange
-        component: SacClaimChange
+      - name: CsxClaimChange
+        component: CsxClaimChange
 
       - name: alerts
         component: Chip
