--- a/tests/mocks/schemas/edit-with-actions-source.yml
+++ b/tests/mocks/schemas/edit-with-actions-source.yml
@@ -1400,8 +1400,8 @@ sections:
         component: Color
         componentAttributes:
           showCode: true
-      - name: sacClaimChange
-        component: SacClaimChange
+      - name: CsxClaimChange
+        component: CsxClaimChange
 
       - name: alerts
         component: Chip
