--- a/tests/mocks/schemas/edit-with-actions-static-section-name.yml
+++ b/tests/mocks/schemas/edit-with-actions-static-section-name.yml
@@ -1407,8 +1407,8 @@ sections:
         component: Color
         componentAttributes:
           showCode: true
-      - name: sacClaimChange
-        component: SacClaimChange
+      - name: CsxClaimChange
+        component: CsxClaimChange
 
       - name: alerts
         component: Chip
