--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1386,8 +1386,8 @@ sections:
         component: Color
         componentAttributes:
           showCode: true
-      - name: sacClaimChange
-        component: SacClaimChange
+      - name: CsxClaimChange
+        component: CsxClaimChange
 
       - name: alerts
         component: Chip
