add marker prop: hideDefaultMarkers

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -655,6 +655,7 @@ sections:
                 size: 30
                 useTheme: themeName
                 themeField: themeField
+                hideDefaultMarkers: true
                 infoSchema:
                   fieldsGroup:
                     - name: detail
