Agregada validacion para no permitir keys nuevas cuando no hay type

--- a/tests/mocks/schemas/new-with-min-max-input.yml
+++ b/tests/mocks/schemas/new-with-min-max-input.yml
@@ -23,5 +23,6 @@ sections:
             options:
               length: 50
       componentAttributes:
+        type: 'number'
         minValueField: '5'
         maxValue: 5
