Agregada prop parentFilterDefaultValue

--- a/tests/mocks/schemas/edit-with-actions-source.yml
+++ b/tests/mocks/schemas/edit-with-actions-source.yml
@@ -1074,6 +1074,7 @@ sections:
             componentAttributes:
               translateLabels: true
               parentFilterName: parent
+              parentFilterDefaultValue: 'null'
               canClear: true
               maxLevel: 3
               options:
