--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "export TEST_ENV=true; mocha --timeout 8000 --exit -R nyan --require tests/bootstrap.js --recursive tests/",
     "test-ci": "nyc --reporter=lcov --reporter=text-summary mocha --timeout 8000 --exit --recursive tests/",
+    "test-file": "node index.js validate -i ",
     "coverage:report-html": "export MS_PATH=src; export TEST_ENV=true; nyc --reporter=html --reporter=text mocha --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --timeout 8000 --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
