change type to boolean

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -713,7 +713,7 @@ sections:
               showPOI: false
               maxMarkersQuantity: 5
               drawRoute: true
-              originMarker: "default" 
+              originMarker: true
               destinationMarker:
                 icon: janis
                 size: "24"
