CHANGE: edit view in json and yml file type

--- a/tests/mocks/schemas/edit-with-actions-source.yml
+++ b/tests/mocks/schemas/edit-with-actions-source.yml
@@ -258,6 +258,7 @@ sections:
                 service: id
                 namespace: user-temporal-password
                 method: post
+                resolve: false
               endpointParameters:
                 - name: id
                   target: path
