--- a/tests/mocks/schemas/edit-with-actions-static-section-name.yml
+++ b/tests/mocks/schemas/edit-with-actions-static-section-name.yml
@@ -265,6 +265,7 @@ sections:
                 service: id
                 namespace: user-temporal-password
                 method: post
+                resolve: false
               endpointParameters:
                 - name: id
                   target: path
