--- a/tests/mocks/schemas/edit-with-remote-actions.yml
+++ b/tests/mocks/schemas/edit-with-remote-actions.yml
@@ -263,6 +263,7 @@ sections:
                 service: id
                 namespace: user-temporal-password
                 method: post
+                resolve: false
               endpointParameters:
                 - name: id
                   target: path
