--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -244,6 +244,7 @@ sections:
                 service: id
                 namespace: user-temporal-password
                 method: post
+                resolve: false
               endpointParameters:
                 - name: id
                   target: path
