add dateDelivery mapper example at edit mocks

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -31,6 +31,11 @@ header:
       component: Chip
       componentAttributes:
         textColor: colorName
+    - name: chipFieldWithMapper
+      component: Chip
+      componentAttributes:
+        textColor: colorName
+      mapper: dateDelivery
     - name: mediumChipField
       component: MediumChip
     - name: smallChipField
